--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "cookies-next": "^4.2.1",
+    "es-toolkit": "^1.32.0",
     "eslint": "8.26.0",
     "eslint-config-next": "14.2.3",
     "framer-motion": "^9.0.4",
