--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Deploy to Vercel
         id: deploy
         run: |
-          vercel --token ${{ secrets.VERCEL_TOKEN }} --yes --scope goodparty
+          vercel --token ${{ secrets.VERCEL_TOKEN }} --yes --scope good-party
 
       - name: Capture Deployment URL
         run: |
