feat: ecanvasser dashboard summary

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "query-string": "^9.1.0",
     "react": "18.2.0",
     "react-canvas-confetti": "^1.4.0",
+    "react-chartjs-2": "^5.3.0",
     "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.1.0",
     "react-csv": "^2.2.2",
@@ -100,9 +101,9 @@
     "cross-env": "^7.0.3",
     "eslint-plugin-mdx": "^2.1.0",
     "eslint-plugin-storybook": "^0.6.12",
+    "madge": "^8.0.0",
     "postcss": "^8.4.23",
     "prettier": "^2.7.1",
-    "storybook": "7.6.16",
-    "madge": "^8.0.0"
+    "storybook": "7.6.16"
   }
 }
