[WEB-3851] - take two

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -22,9 +22,9 @@ jobs:
       - name: Install Vercel CLI
         run: npm install -g vercel
 
-#      - name: Link Vercel Project
-#        run: |
-#          vercel link --token ${{ secrets.VERCEL_TOKEN }} --yes --project gp-ui --scope good-party
+      - name: Link Vercel Project
+        run: |
+          vercel link --token ${{ secrets.VERCEL_TOKEN }} --yes --project gp-ui --scope good-party
 #
 #      - name: Deploy to Vercel
 #        id: deploy
