--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -8,6 +8,9 @@ jobs:
     if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     steps:
+      - name: Print Deployment Status
+        run: |
+          echo "Deployment Status: ${{ toJson(github.event.deployment_status) }}"
       - name: Check out the repository to the runner
         uses: actions/checkout@v4
 
