--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   run-e2e-tests:
-    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
+    if: github.event_name == 'deployment_status' && contains(github.event.deployment_status.environment, 'gp-ui') && github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     steps:
       - name: Print Deployment Status
