--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -7,12 +7,11 @@ on:
       - 'Production - gp-ui'
 jobs:
   run-e2e-tests:
-#    if: github.event_name == 'deployment_status' && contains(github.event.deployment_status.environment, 'gp-ui') && github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     steps:
-      - name: Print Deployment Status
+      - name: Print Workflow Trigger Event
         run: |
-          echo "Deployment Status: ${{ toJson(github.event.deployment_status) }}"
+          echo "Deployment Status: ${{ toJson(github.event) }}"
       - name: Check out the repository to the runner
         uses: actions/checkout@v4
 
