--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Print Workflow Trigger Event
         run: |
-          echo "Deployment Status: ${{ toJson(github.event) }}"
+          echo "Workflow Trigger Event: ${{ toJson(github.event) }}"
       - name: Check out the repository to the runner
         uses: actions/checkout@v4
 
