--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -11,8 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print Workflow Trigger Event
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
         run: |
-          echo "Workflow Trigger Event: ${{ toJson(github.event) }}"
+          echo "Workflow Trigger Event: $GITHUB_CONTEXT"
           echo "WTF??"
 
       - name: Check out the repository to the runner
