Added retry mechanism

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -44,19 +44,43 @@ jobs:
             echo "BASE_URL=https://goodparty.org" >> $GITHUB_ENV
             echo "SKIP_TESTS=false" >> $GITHUB_ENV
           else
-            # Get all deployment URLs
-            DEPLOYMENT_URLS="${{ github.event.deployment_status.environment_url }}"
+            # Function to get deployment URLs
+            get_deployment_url() {
+              DEPLOYMENT_URLS="${{ github.event.deployment_status.environment_url }}"
+              if [[ "$DEPLOYMENT_URLS" != *"styleguide"* ]]; then
+                echo "$DEPLOYMENT_URLS"
+                return 0
+              fi
+              return 1
+            }
             
-            # Choose the non-styleguide URL (the one containing 'git-')
-            if [[ "$DEPLOYMENT_URLS" == *"git-"* ]]; then
-              DEPLOYMENT_URL=$(echo "$DEPLOYMENT_URLS" | grep "git-" || echo "$DEPLOYMENT_URLS")
-            else
-              DEPLOYMENT_URL="$DEPLOYMENT_URLS"
+            # Try to get non-styleguide URL with retries
+            MAX_ATTEMPTS=5
+            ATTEMPT=1
+            WAIT_TIME=30
+            
+            while [ $ATTEMPT -le $MAX_ATTEMPTS ]; do
+              echo "Attempt $ATTEMPT of $MAX_ATTEMPTS to get non-styleguide deployment URL..."
+              
+              if DEPLOYMENT_URL=$(get_deployment_url); then
+                echo "Found non-styleguide deployment URL: $DEPLOYMENT_URL"
+                echo "BASE_URL=$DEPLOYMENT_URL" >> $GITHUB_ENV
+                echo "SKIP_TESTS=false" >> $GITHUB_ENV
+                break
+              fi
+              
+              if [ $ATTEMPT -lt $MAX_ATTEMPTS ]; then
+                echo "Waiting ${WAIT_TIME} seconds before next attempt..."
+                sleep $WAIT_TIME
+              fi
+              
+              ATTEMPT=$((ATTEMPT + 1))
+            done
+            
+            if [ $ATTEMPT -gt $MAX_ATTEMPTS ]; then
+              echo "Failed to find non-styleguide deployment URL after $MAX_ATTEMPTS attempts"
+              exit 1
             fi
-            
-            echo "DEPLOYMENT_URL = $DEPLOYMENT_URL"
-            echo "BASE_URL=$DEPLOYMENT_URL" >> $GITHUB_ENV
-            echo "SKIP_TESTS=false" >> $GITHUB_ENV
           fi
 
       - name: Checkout test-automation Repository
