--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -2,12 +2,14 @@ name: E2E Tests
 
 on:
   deployment_status:
-    environment:
+    environments:
       - 'Preview - gp-ui'
       - 'Production - gp-ui'
 jobs:
   run-e2e-tests:
-    if: contains(github.event.deployment.repository, 'gp-ui')
+    if: |
+      github.event.deployment_status.environment == 'Preview - gp-ui' || 
+      github.event.deployment_status.environment == 'Production - gp-ui'
     runs-on: ubuntu-latest
     steps:
       - name: Print Workflow Trigger Event
